package com.example.flattie.model;

import jakarta.persistence.*;

/**
 * Database entity representing a chore list item. Mapped automatically to
 * database schema using ChoreListItemRepository and ChoreListItemService.
 * @see com.example.flattie.repository.ChoreListItemRepository
 * @see com.example.flattie.service.ChoreListItemService
 */
@Entity
public class ChoreListItem {

    // Automatically generated by the database so is not needed in constructor.
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;
    private String choreName;
    private String assignment;
    private int priority;
    private int frequency; // in days
    private boolean isCompleted;

    /**
     * Constructs a new chore list item. Needed for spring to function.
     */
    protected ChoreListItem() {
    }

    /**
     * Constructs a new chore list item.
     */
    public ChoreListItem(String choreName, String assignment, int priority, int frequency, boolean isCompleted) {
        this.choreName = choreName;
        this.assignment = assignment;
        this.priority = priority;
        this.frequency = frequency;
        this.isCompleted = isCompleted;
    }

    /**
     * Returns the ID of the chore
     * @return the ID of the chore
     */
    public Long getId() {
        return id;
    }

    /**
     * Sets the ID of the chore
     * @param id the ID of the chore
     */
    public void setId(Long id) {
        this.id = id;
    }

    /**
     * Returns the name of the chore.
     * @
     * @return the name of the chore
     */
    public String getChoreName() {
        return choreName;
    }


    /**
     * Sets the name of the chore.
     * @param choreName the name of the chore
     */
    public void setChoreName(String choreName) {
        this.choreName = choreName;
    }

    /**
     * Returns the flatmate assignment of the chore.
     * @return person assigned to the chore
     */
    public String getAssignment() {
        return assignment;
    }

    /**
     * Sets the assignment of the chore.
     * @param assignment the assignment of the chore
     */
    public void setAssignment(String assignment) {
        this.assignment = assignment;
    }

    /**
     * Returns the priority of the chore.
     * @return the priority of the chore
     */
    public int getPriority() {
        return priority;
    }

    /**
     * Sets the priority of the chore.
     * @param priority the priority of the chore
     */
    public void setPriority(int priority) {
        this.priority = priority;
    }

    /**
     * Returns the frequency of the chore.
     * @return the frequency of the chore
     */
    public int getFrequency() {
        return frequency;
    }

    /**
     * Sets whether or not the chore is completed.
     * @param isCompleted whether or not the chore is completed
     */
    public void setCompleted(boolean isCompleted) {
        this.isCompleted = isCompleted;
    }

    /**
     * Returns whether or not the chore is completed.
     * @return whether or not the chore is completed
     */
    public boolean isCompleted() {
        return isCompleted;
    }
}
